# media-mover

./: .gitignore  Makefile  README.md  TODO.md  copy_files.py  media-mover.py  pyproject.toml
.github/workflows/: pyinstaller-windows.yml  release.yml
src/: futil.py  gui.py  main.py  settings.py  utils.py
