[tool.poetry]
name = "media-mover"
version = "1.0.0-test9"
description = "Search through all matching files on computer and move to an external drive"
authors = ["dawsonbooth <github@dawsonbooth.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.46.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.0"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
