[tool.poetry]
name = "media-mover"
version = "1.0.0"
description = "Search through all matching files on computer and move to an external drive"
authors = ["dawsonbooth <github@dawsonbooth.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pysimplegui = "^4.19.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.0"
autopep8 = "^1.5.2"
pyinstaller = "^3.6"

macholib = { version = "^1.8", markers = "sys_platform == 'darwin'" }
pefile = { version = "^2017.8.1", markers = "sys_platform == 'win32'" }
pywin32-ctypes = { version = "^0.2.0", markers = "sys_platform == 'win32'" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
